<resources>
  <string name="app_name">WholeMart</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="error">Something went wrong!</string>
  <string name="action_settings">Settings</string>
  <string name="lbl_fullname">Full Name</string>
  <string name="lbl_mob_no">Mobile No.</string>
  <string name="login_emailid">Email Id</string>
  <string name="login_Password">Password</string>
  <string name="lbl_create_account">CREATE ACCOUNT</string>
  <string name="service_not_available">Sorry,couldn\'t locate you,Please enter address manually</string>
  <string name="no_geocoder_available">No geo coder available</string>
  <string name="address_found">Address found</string>
  <string name="dummy_resource_name">Arhar ki Daal</string>
  <string name="detail_price">\u20B9 %1$s</string>
  <string name="close">CLOSE</string>
  <string name="ok">OK</string>
  <string name="add_to_cart">Add to cart</string>
  <string name="arhar_ki_daal">Arhar ki Daal</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="login">LOGIN</string>
  <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
  <string name="login_with_gmail">LOGIN WITH GMAIL</string>
  <string name="need_an_account">NEED AN ACCOUNT?</string>
  <string name="sign_up_now">SIGN UP NOW</string>
  <string name="location">WholeMart needs GPS permission to locate your location.</string>
  <string name="your_current_location">Your Current Location</string>
  <string name="unknown">Unknown</string>
  <string name="use_current_location">LET US FIND YOU</string>
  <string name="or">OR</string>
  <string name="enter_location_manually">ENTER LOCATION MANUALLY</string>
  <string name="delivery_text">Choose Delivery Location</string>
  <string name="tracking_your_location">Tracking your location…</string>
  <string name="skip_for_now">SKIP FOR NOW</string>
  <string name="lbl_skip_for_now">Skip For Now</string>
  <string name="lbl_verify">Next</string>
  <string name="enter_mobile">Please enter your mobile number</string>
  <string name="welcome">Whole Mart</string>
  <string name="login_invalid_FirstName">Invalid Name</string>
  <string name="login_invalid_PhoneNumber">Invalid Phone Number</string>
  <string name="login_invalid_Password">Invalid password,should be at least 8 characters</string>
  <string name="login_invalid_emailid">Invalid email id</string>
  <string name="name_validation_error_can_enter_only_first_and_last_name">Please enter only first name and lastname \\n e.g James Anderson</string>
  <string name="name_validation_error_firstName_should_have_only_alphabets">Firstname can only contain alphabets</string>
  <string name="name_validation_error_lastname_min_2_chars">Provide lastname of min 2 characters</string>
  <string name="name_validation_error_lastName_should_have_only_alphabets">Lastname can only contain alphabets</string>
  <string name="name_validation_error_firstname_and_lastName_shouldnt_be_same">Firstname and Lastname should not be same</string>
  <string name="name_validation_error_firstname_min_2_chars">Provide firstname of min 2 characters</string>
  <string name="rupee_string">\u20B9%1$s</string>
  <string name="close_icon">&#xe07f;</string>
  <string name="address">Enter your full address</string>
  <string name="city">City</string>
  <string name="area">Area</string>
  <string name="flat">Flat No./House No.</string>
  <string name="apartment">Apartment/Locality/Area</string>
  <string name="done">DONE</string>
  <string name="company">Company</string>
  <string name="checkout">CHECKOUT(%1$d)</string>
  <string name="price">\u20B9 %1$s /kg</string>
  <string name="proceed">Proceed To Pay %1$s ></string>
  <string name="quantity">%1$s KGS</string>
  <string name="medium">medium</string>
  <string name="light">light</string>
  <string name="regular">regular</string>
  <string name="thin">thin</string>
  <string name="font_black">font black</string>
  <string name="light_underline">light_underline</string>
  <string name="condensed_regular">condensed_regular</string>
  <string name="condensed_light">condensed_light</string>
  <string name="condensed_bold">condensed_bold</string>
  <string name="bold">bold</string>
  <string name="start_date">Date</string>
  <string name="start_time">Time</string>
  <string name="seat_details">SEAT DETAILS</string>
  <string name="status">STATUS</string>
  <string name="booked_on">Booked on</string>
  <string name="order_id">ORDER ID</string>
  <string name="contact_details">Contact Details For Queries</string>
  <string name="you_paid">YOU PAID</string>
  <string name="name">Name</string>
  <string name="checkin">CheckIn</string>
  <string name="whole_mart">WHOLEMART</string>
  <string name="home">Home</string>
  <string name="search">Search</string>
  <string name="internet_connected">No internet connection!</string>
  <string name="phone">Phone</string>


</resources>
