<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".location.WholeMartLocationActivity">

  <include layout="@layout/base_toolbar"/>

  <ImageView
    android:layout_centerHorizontal="true"
    android:layout_above="@+id/current_location_text"
    android:id="@+id/location_icon"
    android:layout_marginBottom="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_location_on_orange_48dp"/>

  <abominable.com.wholeseller.common.WMTextView
    android:tag="@string/regular"
    android:layout_centerInParent="true"
    android:id="@+id/current_location_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/shade_grey"
    android:text="@string/your_current_location"
    />

  <abominable.com.wholeseller.common.WMTextView
    android:tag="@string/medium"
    android:id="@+id/current_location"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/current_location_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/shade_grey"
    android:text="@string/unknown"
    android:layout_marginTop="10dp"
    />

  <abominable.com.wholeseller.common.WMTextView
    android:id="@+id/use_current_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/current_location"
    android:layout_marginTop="25dp"
    android:background="@drawable/translucent_ripple"
    android:gravity="center"
    android:padding="10dp"
    android:text="@string/use_current_location"
    android:textColor="@color/white"
    android:tag="@string/light"/>
  <abominable.com.wholeseller.common.WMTextView
    android:id="@+id/or_text"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/use_current_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/shade_grey"
    android:text="@string/or"
    android:tag="@string/regular"
    android:layout_marginTop="20dp"
    />

  <abominable.com.wholeseller.common.WMTextView
    android:id="@+id/enter_manual_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/or_text"
    android:layout_marginTop="20dp"
    android:background="@drawable/translucent_ripple"
    android:gravity="center"
    android:padding="10dp"
    android:text="@string/enter_location_manually"
    android:textColor="@color/white"
    android:tag="@string/light"/>

  <abominable.com.wholeseller.common.WMTextView
    android:id="@+id/skip"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/enter_manual_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/logo_orange"
    android:text="@string/skip_for_now"
    android:tag="@string/bold"
    android:layout_marginTop="30dp"
    />

</RelativeLayout>