<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/email_id_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"

    android:layout_marginTop="30dp">

    <EditText
      android:id="@+id/email_id"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:imeOptions="actionNext"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      android:textColor="@color/review_black"
      android:textStyle="bold"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/password_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/email_id_layout"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp">

    <EditText
      android:id="@+id/old_pass"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:imeOptions="actionNext"
      android:inputType="textPassword"
      android:textStyle="bold"/>
  </android.support.design.widget.TextInputLayout>

  <abominable.com.wholeseller.common.WMTextView
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/password_layout"
    android:layout_marginTop="20dp"
    android:background="@drawable/translucent_ripple"
    android:gravity="center"
    android:padding="10dp"
    android:tag="@string/medium"
    android:text="@string/login"
    android:textColor="@color/white"/>


  <com.google.android.gms.common.SignInButton
    android:id="@+id/gmail_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/login_button"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"/>

  <abominable.com.wholeseller.common.WMTextView
    android:id="@+id/need_an_account"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/gmail_login"
    android:layout_marginTop="60dp"
    android:gravity="center"
    android:padding="10dp"
    android:tag="@string/regular"
    android:text="@string/need_an_account"
    android:textColor="@color/logo_orange"
    android:textSize="20sp"/>

  <abominable.com.wholeseller.common.WMTextView
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/need_an_account"
    android:layout_marginTop="5dp"
    android:background="@drawable/translucent_ripple"
    android:gravity="center"
    android:padding="10dp"
    android:tag="@string/medium"
    android:text="@string/sign_up_now"
    android:textColor="@color/white"/>


</RelativeLayout>