<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <include layout="@layout/base_toolbar"/>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/input_layout_flat"
    style="@style/TextInputLayout"
    android:layout_below="@+id/toolbar"
    android:layout_margin="16sp">

    <EditText
      android:id="@+id/edt_flat"
      style="@style/TextInputEditText"
      android:typeface="monospace"
      android:hint="@string/flat"
      android:inputType="text"
      android:text=""/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_apartment"
      style="@style/TextInputLayout"
      android:layout_below="@+id/input_layout_flat"
      android:layout_margin="16sp">

      <EditText
        android:id="@+id/edt_apartment"
        style="@style/TextInputEditText"
        android:hint="@string/apartment"
        android:typeface="monospace"
        android:inputType="text"
        android:text=""/>

    </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/input_layout_city"
    android:layout_below="@+id/input_apartment"
    style="@style/TextInputLayout"
    android:layout_margin="16sp">

    <EditText
      android:id="@+id/edt_city"
      android:typeface="monospace"
      style="@style/TextInputEditText"
      android:hint="@string/city"
      android:inputType="text"
      android:text=""/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/input_layout_company"
    android:layout_below="@+id/input_layout_city"
    style="@style/TextInputLayout"
    android:layout_margin="16sp">

    <EditText
      android:id="@+id/edt_company"
      android:typeface="monospace"
      style="@style/TextInputEditText"
      android:hint="@string/company"
      android:inputType="text"
      android:text=""/>
  </android.support.design.widget.TextInputLayout>

  <TextView
    android:layout_below="@+id/input_layout_company"
    android:id="@+id/button_done"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:typeface="monospace"
    android:background="@drawable/translucent_ripple"
    android:gravity="center"
    android:padding="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:text="@string/done"
    android:layout_marginBottom="80dp"
    android:textColor="@color/l_grey"
    android:textSize="20sp"/>

</RelativeLayout>
</ScrollView>