<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <include layout="@layout/base_toolbar"/>

  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_below="@+id/toolbar">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="@dimen/order_margin">

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <abominable.com.wholeseller.common.WMTextView
          android:id="@+id/status"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="start|center_vertical"
          android:layout_weight="1"
          android:paddingLeft="10dp"
          android:tag="@string/bold"
          android:text="@string/status"
          android:textColor="@color/order_text"
          android:textSize="12sp"/>

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="end"
          android:orientation="horizontal"
          android:paddingEnd="10dp"
          android:paddingRight="10dp">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:tag="@string/condensed_light"
            android:text="@string/booked_on"
            android:textColor="@color/order_text"
            android:textSize="15sp"/>

          <abominable.com.wholeseller.common.WMTextView
            android:id="@+id/booked_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:tag="@string/condensed_light"
            android:text="@string/start_date"
            android:textColor="@color/order_text"
            android:textSize="15sp"/>
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/ticketheader"
          android:orientation="horizontal"
          android:paddingBottom="15dp"
          android:paddingEnd="@dimen/order_content_margin"
          android:paddingLeft="5dp"
          android:paddingRight="@dimen/order_content_margin"
          android:paddingStart="5dp"
          android:paddingTop="15dp">

          <abominable.com.wholeseller.common.WMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:tag="@string/condensed_regular"
            android:text="@string/order_id"
            android:textColor="@color/order_black"
            android:textSize="13sp"/>

          <abominable.com.wholeseller.common.WMTextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tag="@string/condensed_regular"
            android:text="1234567890"
            android:textColor="@color/order_black"
            android:textSize="12sp"
            android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/tic"
          android:orientation="vertical">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/order_heading"
            android:orientation="horizontal">


            <android.support.v7.widget.RecyclerView
              android:id="@+id/order_list"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>


          </LinearLayout>

          <LinearLayout
            android:id="@+id/contact_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <abominable.com.wholeseller.common.WMTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="start"
              android:paddingLeft="@dimen/order_content_text_margin"
              android:paddingTop="10dp"
              android:tag="@string/condensed_light"
              android:text="@string/contact_details"
              android:textColor="@color/order_light"
              android:textSize="14sp"/>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingEnd="10dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingStart="10dp"
              android:paddingTop="5dp">

              <abominable.com.wholeseller.common.WMTextView
                android:id="@+id/call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:drawableStart="@android:drawable/ic_menu_call"
                android:gravity="center|start"
                android:padding="10dp"
                android:tag="@string/condensed_light"
                android:text="09654887711"
                android:textColor="@color/logo_orange"
                android:textSize="15sp"/>


            </LinearLayout>
          </LinearLayout>

          <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/order_content_margin"
            android:layout_marginLeft="@dimen/order_content_margin"
            android:layout_marginRight="@dimen/order_content_margin"
            android:layout_marginStart="@dimen/order_content_margin"
            android:background="@color/order_very_light_grey">
          </View>


          <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/order_content_margin"
            android:layout_marginLeft="@dimen/order_content_margin"
            android:layout_marginRight="@dimen/order_content_margin"
            android:layout_marginStart="@dimen/order_content_margin"
            android:background="@color/order_very_light_grey">
          </View>

          <abominable.com.wholeseller.common.WMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/order_content_text_margin"
            android:paddingLeft="@dimen/order_content_text_margin"
            android:paddingRight="@dimen/order_content_text_margin"
            android:paddingTop="10dp"
            android:tag="@string/condensed_light"
            android:text="@string/email"
            android:textColor="@color/order_light"
            android:textSize="14sp"/>

          <abominable.com.wholeseller.common.WMTextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingEnd="@dimen/order_content_text_margin"
            android:paddingLeft="@dimen/order_content_text_margin"
            android:paddingRight="@dimen/order_content_text_margin"
            android:tag="@string/condensed_regular"
            android:textColor="@color/logo_orange"
            android:textSize="17sp"
            android:textStyle="bold"/>
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ticket_price"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/roundbottom_tilebg"
          android:orientation="vertical"
          android:paddingBottom="10dp"
          android:paddingEnd="@dimen/order_content_text_margin"
          android:paddingLeft="@dimen/order_content_text_margin"
          android:paddingRight="@dimen/order_content_text_margin"
          android:paddingStart="@dimen/order_content_text_margin"
          android:paddingTop="10dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <abominable.com.wholeseller.common.WMTextView
              android:id="@+id/you_paid"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:tag="@string/condensed_bold"
              android:text="\u20B91227"
              android:textColor="@color/logo_orange"
              android:textSize="17sp"/>
          </LinearLayout>

          <abominable.com.wholeseller.common.WMTextView
            android:id="@+id/you_paid_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/condensed_light"
            android:text="@string/you_paid"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:visibility="gone"/>
        </LinearLayout>


      </LinearLayout>
    </LinearLayout>

  </ScrollView>

</RelativeLayout>
